--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1 id="heading"><u>WeatherWatch</u></h1>
+    <p id="sub">Weather Forecasting Webpage</p>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter the City Name" spellcheck="false">
